--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,16 +1,98 @@
-<!doctype html>
-<html lang="en">
+<!DOCTYPE html>
+
+<html>
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <title>{{ page.title }}</title>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <meta name="keywords" content="" />
+    <meta name="description" content="" />
+
+    <meta http-equiv="content-type" content="text/html; charset=utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
+
     <link rel="icon" href="favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="{{ site.github.url }}/css/main.css" type="text/css" />
+    <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Lato:400,100,100italic,300,300italic,400italic,700italic,700,900&amp;subset=latin,latin-ext">
+    <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=PT+Serif:700italic,700,400italic&amp;subset=latin,cyrillic-ext,latin-ext,cyrillic">
+
+    <link rel="stylesheet" type="text/css" href="{{ site.github.url }}/css/jquery.qtip.css" />
+    <link rel="stylesheet" type="text/css" href="{{ site.github.url }}/css/jquery-ui.min.css" />
+    <link rel="stylesheet" type="text/css" href="{{ site.github.url }}/css/superfish.css" />
+    <link rel="stylesheet" type="text/css" href="{{ site.github.url }}/css/flexnav.css" />
+    <link rel="stylesheet" type="text/css" href="{{ site.github.url }}/css/DateTimePicker.min.css" />
+    <link rel="stylesheet" type="text/css" href="{{ site.github.url }}/css/fancybox/jquery.fancybox.css" />
+    <link rel="stylesheet" type="text/css" href="{{ site.github.url }}/css/fancybox/helpers/jquery.fancybox-buttons.css" />
+    <link rel="stylesheet" type="text/css" href="{{ site.github.url }}/css/revolution/layers.css" />
+    <link rel="stylesheet" type="text/css" href="{{ site.github.url }}/css/revolution/settings.css" />
+    <link rel="stylesheet" type="text/css" href="{{ site.github.url }}/css/revolution/navigation.css" />
+    <link rel="stylesheet" type="text/css" href="{{ site.github.url }}/css/base.css" />
+    <link rel="stylesheet" type="text/css" href="{{ site.github.url }}/css/responsive.css" />
+
+    <link rel="stylesheet" type="text/css" href="{{ site.github.url }}/css/main.css" />
+
+    <script type="text/javascript" src="{{ site.github.url }}/script/jquery.min.js"></script>
+
 </head>
 
-<body>
+<body class="template-page-home">
+    
     {{ content }}
-    <script src="{{ site.github.url }}/js/bundle.js"></script>
+
+    <!-- JS files -->
+    <script type="text/javascript" src="{{ site.github.url }}/script/jquery-ui.min.js"></script>
+    <script type="text/javascript" src="{{ site.github.url }}/script/superfish.min.js"></script>
+    <script type="text/javascript" src="{{ site.github.url }}/script/jquery.easing.js"></script>
+    <script type="text/javascript" src="{{ site.github.url }}/script/jquery.blockUI.js"></script>
+    <script type="text/javascript" src="{{ site.github.url }}/script/jquery.qtip.min.js"></script>
+    <script type="text/javascript" src="{{ site.github.url }}/script/jquery.fancybox.js"></script>
+    <script type="text/javascript" src="{{ site.github.url }}/script/isotope.pkgd.min.js"></script>
+    <script type="text/javascript" src="{{ site.github.url }}/script/jquery.actual.min.js"></script>
+    <script type="text/javascript" src="{{ site.github.url }}/script/jquery.flexnav.min.js"></script>
+    <script type="text/javascript" src="{{ site.github.url }}/script/jquery.waypoints.min.js"></script>
+    <script type="text/javascript" src="{{ site.github.url }}/script/sticky.min.js"></script>
+    <script type="text/javascript" src="{{ site.github.url }}/script/jquery.scrollTo.min.js"></script>
+    <script type="text/javascript" src="{{ site.github.url }}/script/jquery.fancybox-media.js"></script>
+    <script type="text/javascript" src="{{ site.github.url }}/script/jquery.fancybox-buttons.js"></script>
+    <script type="text/javascript" src="{{ site.github.url }}/script/jquery.carouFredSel.packed.js"></script>
+    <script type="text/javascript" src="{{ site.github.url }}/script/jquery.responsiveElement.js"></script>
+    <script type="text/javascript" src="{{ site.github.url }}/script/jquery.touchSwipe.min.js"></script>
+    <script type="text/javascript" src="{{ site.github.url }}/script/DateTimePicker.min.js"></script>
+    <script type="text/javascript" src="http://maps.google.com/maps/api/js"></script>
+
+    <!-- Revolution Slider files -->
+    <script type="text/javascript" src="{{ site.github.url }}/script/revolution/jquery.themepunch.revolution.min.js"></script>
+    <script type="text/javascript" src="{{ site.github.url }}/script/revolution/jquery.themepunch.tools.min.js"></script>
+    <script type="text/javascript" src="{{ site.github.url }}/script/revolution/extensions/revolution.extension.actions.min.js"></script>
+    <script type="text/javascript" src="{{ site.github.url }}/script/revolution/extensions/revolution.extension.carousel.min.js"></script>
+    <script type="text/javascript" src="{{ site.github.url }}/script/revolution/extensions/revolution.extension.kenburn.min.js"></script>
+    <script type="text/javascript" src="{{ site.github.url }}/script/revolution/extensions/revolution.extension.layeranimation.min.js"></script>
+    <script type="text/javascript" src="{{ site.github.url }}/script/revolution/extensions/revolution.extension.migration.min.js"></script>
+    <script type="text/javascript" src="{{ site.github.url }}/script/revolution/extensions/revolution.extension.navigation.min.js"></script>
+    <script type="text/javascript" src="{{ site.github.url }}/script/revolution/extensions/revolution.extension.parallax.min.js"></script>
+    <script type="text/javascript" src="{{ site.github.url }}/script/revolution/extensions/revolution.extension.slideanims.min.js"></script>
+    <script type="text/javascript" src="{{ site.github.url }}/script/revolution/extensions/revolution.extension.video.min.js"></script>
+
+    <!-- Plugins files -->
+    <script type="text/javascript" src="{{ site.github.url }}/plugin/booking/jquery.booking.js"></script>
+
+    <!-- Components files -->
+    <script type="text/javascript" src="{{ site.github.url }}/script/template/jquery.template.tab.js"></script>
+    <script type="text/javascript" src="{{ site.github.url }}/script/template/jquery.template.image.js"></script>
+    <script type="text/javascript" src="{{ site.github.url }}/script/template/jquery.template.helper.js"></script>
+    <script type="text/javascript" src="{{ site.github.url }}/script/template/jquery.template.header.js"></script>
+    <script type="text/javascript" src="{{ site.github.url }}/script/template/jquery.template.counter.js"></script>
+    <script type="text/javascript" src="{{ site.github.url }}/script/template/jquery.template.gallery.js"></script>
+    <script type="text/javascript" src="{{ site.github.url }}/script/template/jquery.template.goToTop.js"></script>
+    <script type="text/javascript" src="{{ site.github.url }}/script/template/jquery.template.fancybox.js"></script>
+    <script type="text/javascript" src="{{ site.github.url }}/script/template/jquery.template.moreLess.js"></script>
+    <script type="text/javascript" src="{{ site.github.url }}/script/template/jquery.template.googleMap.js"></script>
+    <script type="text/javascript" src="{{ site.github.url }}/script/template/jquery.template.accordion.js"></script>
+    <script type="text/javascript" src="{{ site.github.url }}/script/template/jquery.template.searchForm.js"></script>
+    <script type="text/javascript" src="{{ site.github.url }}/script/template/jquery.template.testimonial.js"></script>
+    <script type="text/javascript" src="{{ site.github.url }}/script/public.js"></script>
+    
+    <script type="text/javascript" src="{{ site.github.url }}/js/bundle.js"></script>
+
 </body>
+
 </html>
