modify slides on header-bottom.html

--- a/_includes/header-bottom.html
+++ b/_includes/header-bottom.html
@@ -15,7 +15,7 @@
                         data-transform_idle="o:1;" data-transform_in="o:1;x:[175%];y:0px;z:0px;s:2000;e:Power4.easeInOut;" data-transform_out="o:0;x:0px;y:0px;z:0px;s:1000;e:Power4.easeInOut;" data-mask_in="x:[-100%];y:0px;s:inherit;e:inherit;" data-mask_out="x:inherit;y:inherit;s:inherit;e:inherit;"
                         data-start="100" data-splitin="none" data-splitout="none" data-responsive_offset="on" style="letter-spacing: 2px;">
 
-                        WELCOME TO AUTOSPA HAND CAR WASH
+                        WELCOME TO VICTORY LANE HAND CAR WASH
                     </div>
 
                     <!-- Layer 02 -->
@@ -42,89 +42,81 @@
                         data-transform_idle="o:1;" data-transform_in="o:1;x:0px;y:[-100%];z:0px;s:1500;e:Power4.easeInOut;" data-transform_out="o:1;x:0px;y:[100%];z:0px;s:750;e:Power4.easeInOut;" data-mask_in="x:0px;y:0px;s:inherit;e:inherit;" data-mask_out="x:inherit;y:inherit;s:inherit;e:inherit;"
                         data-start="2500" data-splitin="none" data-splitout="none" data-responsive_offset="on">
 
+                        <a class="template-component-button template-color-white" href="#" title="View Full Package">View Full Package</a>
                     </div>
                 </li>
 
                 <!-- Slide 2 -->
                 <li data-index="slide-2" data-transition="fade" data-slotamount="1" data-easein="default" data-easeout="default" data-masterspeed="500" data-rotate="0" data-delay="6000">
-                    <!-- Main image -->
+                     <!--Main image -->
                     <img src="{{ site.github.url }}/images/slider/slider_02.jpg" alt="slide-2" data-bgfit="cover" data-bgposition="center bottom">
-                    <!-- Layers -->
-                    <!-- Layer 01 -->
+                     <!--Layers -->
+                     <!--Layer 01 -->
                     <div class="tp-caption tp-resizeme" data-x="['center','center','center','center','center']" data-hoffset="['0','0','0','0','0']" data-y="['middle','middle','middle','middle','middle']" data-voffset="['-120','-105','-91','-33','-36']" data-fontsize="['17','17','17','15','14']"
                         data-fontweight="['700','700','700','700','900']" data-lineheight="['17','17','17','15','27']" data-whitespace="['nowrap','nowrap','nowrap','nowrap','normal']" data-width="['auto','auto','auto','auto','300']" data-height="auto" data-basealign="grid"
                         data-transform_idle="o:1;" data-transform_in="o:1;x:[175%];y:0px;z:0px;s:2000;e:Power4.easeInOut;" data-transform_out="o:0;x:0px;y:0px;z:0px;s:1000;e:Power4.easeInOut;" data-mask_in="x:[-100%];y:0px;s:inherit;e:inherit;" data-mask_out="x:inherit;y:inherit;s:inherit;e:inherit;"
                         data-start="100" data-splitin="none" data-splitout="none" data-responsive_offset="on" style="letter-spacing: 2px;">
-                        FULL SERVICE AND EXTERIOR TREATMENTS
+                        STEP INTO THE CAR WASH
+                        <ul style="margin-top: 20px; list-style-type: circle">
+                            <li style="margin-left:19px">Wide range of services</li>
+                            <li style="margin-left:19px">Friendly, personable service</li>
+                            <li style="margin-left:19px">More service for less cost</li>
+                            <li style="margin-left:19px">Discount on products and services</li>
+                        </ul>
                     </div>
-
-                    <!-- Layer 02 -->
-                    <div class="tp-caption tp-resizeme" data-x="['center','center','center','center','center']" data-hoffset="['0','0','0','0','0']" data-y="['middle','middle','middle','middle','middle']" data-voffset="['-41','-35','-29','17','26']" data-fontsize="['62','55','43','29','22']"
-                        data-fontweight="['900','900','900','700','700']" data-lineheight="['62','55','43','29','32']" data-whitespace="['nowrap','nowrap','nowrap','nowrap','normal']" data-width="['auto','auto','auto','auto','300']" data-height="auto" data-basealign="grid"
-                        data-transform_idle="o:1;" data-transform_in="o:1;x:0px;y:[100%];z:0px;s:2000;e:Power4.easeInOut;" data-transform_out="o:1;x:0px;y:[100%];z:0px;s:1000;e:Power4.easeInOut;" data-mask_in="x:0px;y:0px;s:inherit;e:inherit;" data-mask_out="x:inherit;y:inherit;s:inherit;e:inherit;"
-                        data-start="1000" data-splitin="none" data-splitout="none" data-responsive_offset="on" style="letter-spacing: 4px;">
-
-                        WE LOVE YOUR CAR
-                    </div>
-
-                    <!-- Layer 03 -->
-                    <div class="tp-caption tp-resizeme" data-x="['center','center','center','center','center']" data-hoffset="['0','0','0','0','0']" data-y="['middle','middle','middle','middle','middle']" data-voffset="['41','35','29','60','74']" data-fontsize="['62','55','43','29','22']"
-                        data-fontweight="['900','900','900','700','700']" data-lineheight="['62','55','43','29','32']" data-whitespace="['nowrap','nowrap','nowrap','nowrap','normal']" data-width="['auto','auto','auto','auto','300']" data-height="auto" data-basealign="grid"
-                        data-transform_idle="o:1;" data-transform_in="o:1;x:0px;y:[100%];z:0px;s:2000;e:Power4.easeInOut;" data-transform_out="o:1;x:0px;y:[100%];z:0px;s:1000;e:Power4.easeInOut;" data-mask_in="x:0px;y:0px;s:inherit;e:inherit;" data-mask_out="x:inherit;y:inherit;s:inherit;e:inherit;"
-                        data-start="1500" data-splitin="none" data-splitout="none" data-responsive_offset="on" style="letter-spacing: 4px;">
-
-                        THE SAME AS YOU DO
-                    </div>
-
-                    <!-- Layer 04 -->
-                    <div class="tp-caption tp-resizeme" data-x="['center','center','center','center','center']" data-hoffset="['0','0','0','0','0']" data-y="['middle','middle','middle','middle','middle']" data-voffset="['150','137','121','142','165']" data-fontsize="['15','15','15','15','15']"
-                        data-fontweight="['400','400','400','400','400']" data-lineheight="['15','15','15','15','15']" data-whitespace="['nowrap','nowrap','nowrap','nowrap','nowrap']" data-width="['auto','auto','auto','auto','auto']" data-height="auto" data-basealign="grid"
-                        data-transform_idle="o:1;" data-transform_in="o:1;x:0px;y:[-100%];z:0px;s:1500;e:Power4.easeInOut;" data-transform_out="o:1;x:0px;y:[100%];z:0px;s:750;e:Power4.easeInOut;" data-mask_in="x:0px;y:0px;s:inherit;e:inherit;" data-mask_out="x:inherit;y:inherit;s:inherit;e:inherit;"
-                        data-start="2500" data-splitin="none" data-splitout="none" data-responsive_offset="on">
-
+                    
+                    <!--Layer 02-->
+                    <div class="tp-caption tp-resizeme multi-button-layer" data-x="['center','center','center','center','center']" data-hoffset="['0','0','0','0','0']" data-y="['middle','middle','middle','middle','middle']" data-voffset="['150','137','121','142','150']" data-fontsize="['15','15','15','15','15']"
+                    data-fontweight="['400','400','400','400','400']" data-lineheight="['15','15','15','15','15']" data-whitespace="['nowrap','nowrap','nowrap','nowrap','nowrap']" data-width="['auto','auto','auto','auto','auto']" data-height="auto" data-basealign="grid"
+                    data-transform_idle="o:1;" data-transform_in="o:1;x:0px;y:[-100%];z:0px;s:1500;e:Power4.easeInOut;" data-transform_out="o:1;x:0px;y:[100%];z:0px;s:750;e:Power4.easeInOut;" data-mask_in="x:0px;y:0px;s:inherit;e:inherit;" data-mask_out="x:inherit;y:inherit;s:inherit;e:inherit;"
+                    data-start="2500" data-splitin="none" data-splitout="none" data-responsive_offset="on">
+                    
+                        <a class="template-component-button template-color-white" href="#" title="ALA CARTE DETAILING">ALA CARTE DETAILING</a>
+                        <a class="template-component-button template-color-white" href="#" title="DETAILING PACKAGES">DETAILING PACKAGES</a>
+                        <a class="template-component-button template-color-white" href="#" title="HAND CAR WASH">HAND CAR WASH</a>
                     </div>
                 </li>
 
                 <!-- Slide 3 -->
-                <li data-index="slide-3" data-transition="fade" data-slotamount="1" data-easein="default" data-easeout="default" data-masterspeed="500" data-rotate="0" data-delay="6000">
+                <!--<li data-index="slide-3" data-transition="fade" data-slotamount="1" data-easein="default" data-easeout="default" data-masterspeed="500" data-rotate="0" data-delay="6000">-->
                     <!-- Main image -->
-                    <img src="{{ site.github.url }}/images/slider/slider_03.jpg" alt="slide-3" data-bgfit="cover" data-bgposition="center bottom">
+                <!--    <img src="{{ site.github.url }}/images/slider/slider_03.jpg" alt="slide-3" data-bgfit="cover" data-bgposition="center bottom">-->
                     <!-- Layers -->
                     <!-- Layer 01 -->
-                    <div class="tp-caption tp-resizeme" data-x="['center','center','center','center','center']" data-hoffset="['0','0','0','0','0']" data-y="['middle','middle','middle','middle','middle']" data-voffset="['-120','-105','-91','-33','-36']" data-fontsize="['17','17','17','15','14']"
-                        data-fontweight="['700','700','700','700','900']" data-lineheight="['17','17','17','15','27']" data-whitespace="['nowrap','nowrap','nowrap','nowrap','normal']" data-width="['auto','auto','auto','auto','300']" data-height="auto" data-basealign="grid"
-                        data-transform_idle="o:1;" data-transform_in="o:1;x:[175%];y:0px;z:0px;s:2000;e:Power4.easeInOut;" data-transform_out="o:0;x:0px;y:0px;z:0px;s:1000;e:Power4.easeInOut;" data-mask_in="x:[-100%];y:0px;s:inherit;e:inherit;" data-mask_out="x:inherit;y:inherit;s:inherit;e:inherit;"
-                        data-start="100" data-splitin="none" data-splitout="none" data-responsive_offset="on" style="letter-spacing: 2px;">
+                <!--    <div class="tp-caption tp-resizeme" data-x="['center','center','center','center','center']" data-hoffset="['0','0','0','0','0']" data-y="['middle','middle','middle','middle','middle']" data-voffset="['-120','-105','-91','-33','-36']" data-fontsize="['17','17','17','15','14']"-->
+                <!--        data-fontweight="['700','700','700','700','900']" data-lineheight="['17','17','17','15','27']" data-whitespace="['nowrap','nowrap','nowrap','nowrap','normal']" data-width="['auto','auto','auto','auto','300']" data-height="auto" data-basealign="grid"-->
+                <!--        data-transform_idle="o:1;" data-transform_in="o:1;x:[175%];y:0px;z:0px;s:2000;e:Power4.easeInOut;" data-transform_out="o:0;x:0px;y:0px;z:0px;s:1000;e:Power4.easeInOut;" data-mask_in="x:[-100%];y:0px;s:inherit;e:inherit;" data-mask_out="x:inherit;y:inherit;s:inherit;e:inherit;"-->
+                <!--        data-start="100" data-splitin="none" data-splitout="none" data-responsive_offset="on" style="letter-spacing: 2px;">-->
 
-                        FROM EXPRESS DETAIL TO FULL INSIDE & OUT
-                    </div>
+                <!--        FROM EXPRESS DETAIL TO FULL INSIDE & OUT-->
+                <!--    </div>-->
 
                     <!-- Layer 02 -->
-                    <div class="tp-caption tp-resizeme" data-x="['center','center','center','center','center']" data-hoffset="['0','0','0','0','0']" data-y="['middle','middle','middle','middle','middle']" data-voffset="['-41','-35','-29','17','26']" data-fontsize="['62','55','43','29','22']"
-                        data-fontweight="['900','900','900','700','700']" data-lineheight="['62','55','43','29','32']" data-whitespace="['nowrap','nowrap','nowrap','nowrap','normal']" data-width="['auto','auto','auto','auto','300']" data-height="auto" data-basealign="grid"
-                        data-transform_idle="o:1;" data-transform_in="o:1;x:0px;y:[100%];z:0px;s:2000;e:Power4.easeInOut;" data-transform_out="o:1;x:0px;y:[100%];z:0px;s:1000;e:Power4.easeInOut;" data-mask_in="x:0px;y:0px;s:inherit;e:inherit;" data-mask_out="x:inherit;y:inherit;s:inherit;e:inherit;"
-                        data-start="1000" data-splitin="none" data-splitout="none" data-responsive_offset="on" style="letter-spacing: 4px;">
+                <!--    <div class="tp-caption tp-resizeme" data-x="['center','center','center','center','center']" data-hoffset="['0','0','0','0','0']" data-y="['middle','middle','middle','middle','middle']" data-voffset="['-41','-35','-29','17','26']" data-fontsize="['62','55','43','29','22']"-->
+                <!--        data-fontweight="['900','900','900','700','700']" data-lineheight="['62','55','43','29','32']" data-whitespace="['nowrap','nowrap','nowrap','nowrap','normal']" data-width="['auto','auto','auto','auto','300']" data-height="auto" data-basealign="grid"-->
+                <!--        data-transform_idle="o:1;" data-transform_in="o:1;x:0px;y:[100%];z:0px;s:2000;e:Power4.easeInOut;" data-transform_out="o:1;x:0px;y:[100%];z:0px;s:1000;e:Power4.easeInOut;" data-mask_in="x:0px;y:0px;s:inherit;e:inherit;" data-mask_out="x:inherit;y:inherit;s:inherit;e:inherit;"-->
+                <!--        data-start="1000" data-splitin="none" data-splitout="none" data-responsive_offset="on" style="letter-spacing: 4px;">-->
 
-                        DETAILING SERVICES
-                    </div>
+                <!--        DETAILING SERVICES-->
+                <!--    </div>-->
 
                     <!-- Layer 03 -->
-                    <div class="tp-caption tp-resizeme" data-x="['center','center','center','center','center']" data-hoffset="['0','0','0','0','0']" data-y="['middle','middle','middle','middle','middle']" data-voffset="['41','35','29','60','74']" data-fontsize="['62','55','43','29','22']"
-                        data-fontweight="['900','900','900','700','700']" data-lineheight="['62','55','43','29','32']" data-whitespace="['nowrap','nowrap','nowrap','nowrap','normal']" data-width="['auto','auto','auto','auto','300']" data-height="auto" data-basealign="grid"
-                        data-transform_idle="o:1;" data-transform_in="o:1;x:0px;y:[100%];z:0px;s:2000;e:Power4.easeInOut;" data-transform_out="o:1;x:0px;y:[100%];z:0px;s:1000;e:Power4.easeInOut;" data-mask_in="x:0px;y:0px;s:inherit;e:inherit;" data-mask_out="x:inherit;y:inherit;s:inherit;e:inherit;"
-                        data-start="1500" data-splitin="none" data-splitout="none" data-responsive_offset="on" style="letter-spacing: 4px;">
+                <!--    <div class="tp-caption tp-resizeme" data-x="['center','center','center','center','center']" data-hoffset="['0','0','0','0','0']" data-y="['middle','middle','middle','middle','middle']" data-voffset="['41','35','29','60','74']" data-fontsize="['62','55','43','29','22']"-->
+                <!--        data-fontweight="['900','900','900','700','700']" data-lineheight="['62','55','43','29','32']" data-whitespace="['nowrap','nowrap','nowrap','nowrap','normal']" data-width="['auto','auto','auto','auto','300']" data-height="auto" data-basealign="grid"-->
+                <!--        data-transform_idle="o:1;" data-transform_in="o:1;x:0px;y:[100%];z:0px;s:2000;e:Power4.easeInOut;" data-transform_out="o:1;x:0px;y:[100%];z:0px;s:1000;e:Power4.easeInOut;" data-mask_in="x:0px;y:0px;s:inherit;e:inherit;" data-mask_out="x:inherit;y:inherit;s:inherit;e:inherit;"-->
+                <!--        data-start="1500" data-splitin="none" data-splitout="none" data-responsive_offset="on" style="letter-spacing: 4px;">-->
 
-                        WITH A PERSONAL TOUCH
-                    </div>
+                <!--        WITH A PERSONAL TOUCH-->
+                <!--    </div>-->
 
                     <!-- Layer 04 -->
-                    <div class="tp-caption tp-resizeme" data-x="['center','center','center','center','center']" data-hoffset="['0','0','0','0','0']" data-y="['middle','middle','middle','middle','middle']" data-voffset="['150','137','121','142','165']" data-fontsize="['15','15','15','15','15']"
-                        data-fontweight="['400','400','400','400','400']" data-lineheight="['15','15','15','15','15']" data-whitespace="['nowrap','nowrap','nowrap','nowrap','nowrap']" data-width="['auto','auto','auto','auto','auto']" data-height="auto" data-basealign="grid"
-                        data-transform_idle="o:1;" data-transform_in="o:1;x:0px;y:[-100%];z:0px;s:1500;e:Power4.easeInOut;" data-transform_out="o:1;x:0px;y:[100%];z:0px;s:750;e:Power4.easeInOut;" data-mask_in="x:0px;y:0px;s:inherit;e:inherit;" data-mask_out="x:inherit;y:inherit;s:inherit;e:inherit;"
-                        data-start="2500" data-splitin="none" data-splitout="none" data-responsive_offset="on">
+                <!--    <div class="tp-caption tp-resizeme" data-x="['center','center','center','center','center']" data-hoffset="['0','0','0','0','0']" data-y="['middle','middle','middle','middle','middle']" data-voffset="['150','137','121','142','165']" data-fontsize="['15','15','15','15','15']"-->
+                <!--        data-fontweight="['400','400','400','400','400']" data-lineheight="['15','15','15','15','15']" data-whitespace="['nowrap','nowrap','nowrap','nowrap','nowrap']" data-width="['auto','auto','auto','auto','auto']" data-height="auto" data-basealign="grid"-->
+                <!--        data-transform_idle="o:1;" data-transform_in="o:1;x:0px;y:[-100%];z:0px;s:1500;e:Power4.easeInOut;" data-transform_out="o:1;x:0px;y:[100%];z:0px;s:750;e:Power4.easeInOut;" data-mask_in="x:0px;y:0px;s:inherit;e:inherit;" data-mask_out="x:inherit;y:inherit;s:inherit;e:inherit;"-->
+                <!--        data-start="2500" data-splitin="none" data-splitout="none" data-responsive_offset="on">-->
 
-                    </div>
-                </li>
+                <!--    </div>-->
+                <!--</li>-->
             </ul>
         </div>
     </div>
