--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -57,7 +57,7 @@
     <script type="text/javascript" src="{{ site.github.url }}/script/jquery.responsiveElement.js"></script>
     <script type="text/javascript" src="{{ site.github.url }}/script/jquery.touchSwipe.min.js"></script>
     <script type="text/javascript" src="{{ site.github.url }}/script/DateTimePicker.min.js"></script>
-    <script type="text/javascript" src="http://maps.google.com/maps/api/js"></script>
+    <script type="text/javascript" src="https://maps.google.com/maps/api/js"></script>
 
     <!-- Revolution Slider files -->
     <script type="text/javascript" src="{{ site.github.url }}/script/revolution/jquery.themepunch.revolution.min.js"></script>
